--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,16 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 22px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+h1 {
+  color: #222222;
+}
+
+h2 {
+  color: #333333;
 }
 
 a {
-  color: #00B7FF;
+  color: #444444;
 }
