Updated index page

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,7 @@ extends layout
 block content
   h1= title
   h2= message
+  ul
+    li: a(href='https://jerkdujour.herokuapp.com/api') Check out the JerkDuJour API
+    li: a(href='https://jerkdujour.herokuapp.com/api/reports') See a sample collection of reports
+    li To see an individual report, hit jerkdujour.herokuapp.com/api/reports/report_id
